# git-worktree-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  dependency_report.md  git-worktree-config.jsonc  multi-ai-config.jsonc
.agents/skills/gwt/: SKILL.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
completions/: SETUP.md
src/: README.md  bitbucket_api.rs  bitbucket_auth.rs  bitbucket_data_center_api.rs  bitbucket_data_center_auth.rs  cli.rs  completions.rs  config.rs  constants.rs  error.rs  git.rs  github.rs  hooks.rs  lib.rs  main.rs
src/commands/: add.rs  auth.rs  config.rs  init.rs  list.rs  list_helpers.rs  mod.rs  remove.rs
src/core/: mod.rs  project.rs  utils.rs
tests/: integration_tests.rs  test_utils.rs
