[package]
name = "git-worktree-cli"
version = "0.7.1"
edition = "2021"
authors = ["Mikko Kohtala"]
description = "Enhanced git worktree management with real-time streaming output"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mikko-kohtala/git-worktree-cli"
homepage = "https://github.com/mikko-kohtala/git-worktree-cli"
exclude = ["tests/", ".github/", "Makefile"]
keywords = ["git", "worktree", "cli", "development", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gwt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
json5 = "1.3"
serde_json = "1.0"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.20.0"
keyring = "3.5"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.0"
thiserror = "2.0.12"
async-trait = "0.1.88"
dirs = "6.0"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"
